--- a/html/paragraph-tag.html
+++ b/html/paragraph-tag.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>This is a paragraph</p>
-    <!--used lorem world for testing paragraph-->
+    <!--used  (lorem world)  for testing paragraph-->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi mollitia neque officia quibusdam aspernatur dolores possimus laborum voluptatem, optio aut, et non exercitationem alias qui magnam distinctio tempora, aliquam tenetur!</p>
 
 </body>
