--- a/html/Lists.html
+++ b/html/Lists.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h4>Ordered list</h4>
-    <!--ordered list by show in numeric(1,2,3,..)  
+    <!--ordered list by default show in numeric(1,2,3,..)  
     ordered list types:
     1) Numeric(1,2,3,...)     Attribute type="1"
     2) Uppercase letters(A,B,C,...)  Attribute type="A"
@@ -29,7 +29,7 @@
 
     </ol>
     <h4>Unordered List</h4>
-    <!--Unordered list by show in bullets-->
+    <!--Unordered list by  Default show in bullets-->
     <ul>
         <li>Web Development Fronted</li>
           <ul>
