--- a/html/image+hr-tag.html
+++ b/html/image+hr-tag.html
@@ -9,7 +9,7 @@
     <image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAXPxoBw2qdnU5iSeFC8iU3WAlff5CZfe0cQ&s" alt="notebook picture" height="210px">
    <!--relative url-->
    <hr>
-     <image src="pic.jpg" alt="My picture" width="100px">
+     <image src="images/pic.jpg" alt="My picture" width="100px">
         <hr>
         <P>I learn images tags and hr tag!</P>
     </body>
